fix: incorrect references

--- a/apps/dev/weaveworks-ui/kustomization.yaml
+++ b/apps/dev/weaveworks-ui/kustomization.yaml
@@ -6,6 +6,6 @@ namespace: flux-system
 resources:
   - ../../base/weaveworks-ui
 patches:
-  - path: weaveworks-ui-values.yaml
+  - path: helm-release-values.yaml
     target:
       kind: HelmRelease
