chore: add back values override

--- a/apps/dev/weaveworks-ui/kustomization.yaml
+++ b/apps/dev/weaveworks-ui/kustomization.yaml
@@ -5,23 +5,23 @@ kind: Kustomization
 namespace: flux-system
 resources:
   - ../../base/weaveworks-ui
-# patches:
-#   - target:
-#       group: helm.toolkit.fluxcd.io
-#       version: v2beta1
-#       kind: HelmRelease
-#       name: ww-gitops
-#       namespace: flux-system
-#     patch: |
-#       apiVersion: helm.toolkit.fluxcd.io/v2
-#       kind: HelmRelease
-#       metadata:
-#         name: podinfo
-#         namespace: podinfo
-#       spec:
-#         values:
-#           # ref: https://docs.gitops.weaveworks.org/docs/references/helm-reference
-#           WEAVE_GITOPS_FEATURE_TELEMETRY: "true"
-#           envVars:
-#             - name: WEAVE_GITOPS_FEATURE_OIDC_BUTTON_LABEL
-#               value: "Login with ACME"
+patches:
+  - target:
+      group: helm.toolkit.fluxcd.io
+      version: v2beta1
+      kind: HelmRelease
+      name: ww-gitops
+      namespace: flux-system
+    patch: |
+      apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      metadata:
+        name: podinfo
+        namespace: podinfo
+      spec:
+        values:
+          # ref: https://docs.gitops.weaveworks.org/docs/references/helm-reference
+          WEAVE_GITOPS_FEATURE_TELEMETRY: "true"
+          envVars:
+            - name: WEAVE_GITOPS_FEATURE_OIDC_BUTTON_LABEL
+              value: "Login with ACME"
