--- a/clusters/dev/apps/capacitor-ui/capacitor-ui.yaml
+++ b/clusters/dev/apps/capacitor-ui/capacitor-ui.yaml
@@ -9,7 +9,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/dev/weaveworks-ui
+  path: ./apps/dev/capacitor-ui
   prune: true
   wait: true
   timeout: 5m0s
