--- a/apps/base/capacitor-ui/flux-kustomization.yaml
+++ b/apps/base/capacitor-ui/flux-kustomization.yaml
@@ -1,16 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: capacitor
+  name: capacitor-next
   namespace: flux-system
 spec:
-  targetNamespace: flux-system
-  interval: 1h
-  retryInterval: 2m
-  timeout: 5m
-  wait: true
+  interval: 10m
+  path: "./self-host/yaml"
   prune: true
-  path: "./"
   sourceRef:
-    kind: OCIRepository
-    name: capacitor
+    kind: GitRepository
+    name: capacitor-next
+  targetNamespace: flux-system
