--- a/apps/base/capacitor-ui/flux-kustomization.yaml
+++ b/apps/base/capacitor-ui/flux-kustomization.yaml
@@ -1,13 +1,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: capacitor-next
+  name: capacitor
   namespace: flux-system
 spec:
-  interval: 10m
-  path: "./self-host/yaml"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: capacitor-next
   targetNamespace: flux-system
+  interval: 1h
+  retryInterval: 2m
+  timeout: 5m
+  wait: true
+  prune: true
+  path: "./"
+  sourceRef:
+    kind: OCIRepository
+    name: capacitor
