--- a/apps/base/capacitor-ui/kustomization.yaml
+++ b/apps/base/capacitor-ui/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - git-repository.yaml
+  - oci-repository.yaml
   - flux-kustomization.yaml
-  - serviceaccount.yaml
   
