--- a/.github/workflows/kustomize-verify.yml
+++ b/.github/workflows/kustomize-verify.yml
@@ -15,13 +15,10 @@ jobs:
       #   with:
       #     version: 'latest'
 
-      # - name: Install kustomize
-      #   run: |
-      #     curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
-      #     sudo mv kustomize /usr/local/bin/
+      - name: Install kubeconform
+        run: |
+          curl -L https://github.com/yannh/kubeconform/releases/latest/download/kubeconform-linux-amd64.tar.gz | tar xvzf - && \
+          sudo mv kubeconform /usr/local/bin/kubeconform
 
       - name: Verify Kustomizations
-        run: |
-          find . -name 'kustomization.yaml' -print0 | \
-          xargs -0 -I{} \
-          sh -c 'kubectl kustomize $(dirname $1) ' - '{}'
+        run: scripts/validate.sh
