feat: run gh action on push

--- a/.github/workflows/kustomize-verify.yml
+++ b/.github/workflows/kustomize-verify.yml
@@ -1,8 +1,11 @@
 name: FluxCD - Verify Kustomizations
 
 on:
+  push:
+    branches: ['main']
   pull_request:
     types: [opened, synchronize]
+    
 jobs:
   kustomize-verify:
     runs-on: ubuntu-latest
