--- a/.github/workflows/tailscale.yml
+++ b/.github/workflows/tailscale.yml
@@ -10,6 +10,7 @@ on:
         type: string
 jobs:
   tailscale:
+    if: github.actor.login == 'david-shepard'
     runs-on: ubuntu-latest
     steps:
       - name: Tailscale
