--- a/apps/dev/podinfo/kustomization.yaml
+++ b/apps/dev/podinfo/kustomization.yaml
@@ -2,8 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
 resources:
-  - ../../base/podinfo
-patches:
-  - path: helm-release.yaml
-    target:
-      kind: HelmRelease
+- ../../base/podinfo
+patchesStrategicMerge:
+- helm-release-values.yaml
