--- a/apps/base/podinfo/helm-release.yaml
+++ b/apps/base/podinfo/helm-release.yaml
@@ -4,19 +4,8 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
-  targetNamespace: podinfo
-  interval: 5m
-  chart:
-    spec:
-      chart: podinfo
-      version: ">=1.0.0"
-      sourceRef:
-        kind: HelmRepository
-        name: podinfo
-        namespace: flux-system
-  releaseName: podinfo
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  values: {}  # Empty base values
+  values:
+    ui:
+      color: "#34577c"
+      message: "Hello from dev environment"
+    replicaCount: 2
