--- a/apps/base/podinfo/helm-release.yaml
+++ b/apps/base/podinfo/helm-release.yaml
@@ -4,19 +4,31 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
-  targetNamespace: podinfo
-  interval: 5m
+  interval: 10m
+  timeout: 5m
   chart:
     spec:
       chart: podinfo
-      version: ">=1.0.0"
+      version: '6.5.*'
       sourceRef:
         kind: HelmRepository
         name: podinfo
-        namespace: flux-system
+      interval: 5m
   releaseName: podinfo
+  targetNamespace: flux-system
   install:
-    createNamespace: true
     remediation:
       retries: 3
-  values: {}  # Empty base values
+  upgrade:
+    remediation:
+      retries: 3
+  test:
+    enable: false
+  driftDetection:
+    mode: enabled
+    ignore:
+    - paths: ["/spec/replicas"]
+      target:
+        kind: Deployment
+  values:
+    replicaCount: 2
