chore: debugging podinfo helm chart 20250917_211608

--- a/apps/dev/podinfo/kustomization.yaml
+++ b/apps/dev/podinfo/kustomization.yaml
@@ -9,10 +9,11 @@ patches:
 - target:
     kind: HelmRelease
     name: podinfo
-  patch: |-
-    - op: replace
-      path: /spec/values/ui/color
-      value: "#34577c"
-    - op: replace
-      path: /spec/values/replicaCount
-      value: 3
+  path: helm-release-values.yaml
+  # patch: |-
+  #   - op: add
+  #     path: /spec/values/ui/color
+  #     value: "#34577c"
+#     - op: replace
+#       path: /spec/values/replicaCount
+#       value: 3
