--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,3 +1,6 @@
+# Note: this workflow is sourced from https://github.com/fluxcd/flux2/blob/main/.github/workflows/e2e.yaml
+# and modified to fit this repos structure.
+
 name: e2e
 
 on:
@@ -33,8 +36,8 @@ jobs:
           --path=./clusters/dev
       - name: Verify cluster reconciliation
         run: |
-          kubectl -n flux-system wait kustomization/infra-controllers --for=condition=ready --timeout=5m
-          kubectl -n flux-system wait kustomization/apps --for=condition=ready --timeout=5m
+          kubectl -n flux-system wait kustomization/flux-system --for=condition=ready --timeout=5m
+          kubectl -n flux-system wait kustomization/apps-dev --for=condition=ready --timeout=5m
       - name: Verify helm reconciliation
         run: |
           kubectl -n podinfo wait helmrelease/podinfo --for=condition=ready --timeout=5m
