--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -40,7 +40,7 @@ jobs:
           kubectl -n flux-system wait kustomization/apps-dev --for=condition=ready --timeout=5m
       - name: Verify helm reconciliation
         run: |
-          kubectl -n podinfo wait helmrelease/podinfo --for=condition=ready --timeout=5m
+          kubectl -n flux-system wait helmrelease/podinfo --for=condition=ready --timeout=5m
       - name: Debug failure
         if: failure()
         run: |
