--- a/.github/workflows/generate-kubediagram.yml
+++ b/.github/workflows/generate-kubediagram.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
+
 
       - name: Configure Tailscale
         uses: tailscale/github-action@v3
